cmake_minimum_required(VERSION 3.21)
project(karmac)

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(KARMAC_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set(KARMAC_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

include_directories(${KARMAC_INCLUDE_DIR})

file(GLOB_RECURSE KARMAC_SOURCE_FILES ${KARMAC_SOURCE_DIR}/*.c**)
file(GLOB_RECURSE KARMAC_HEADER_FILES ${KARMAC_SOURCE_DIR}/*.h**)

add_executable(karmac ${KARMAC_SOURCE_FILES} ${KARMAC_HEADER_FILES})